--- a/scrollableScroll/build.gradle
+++ b/scrollableScroll/build.gradle
@@ -1,5 +1,9 @@
 apply plugin: 'com.android.library'
 
+apply plugin: 'com.github.dcendents.android-maven'
+
+group='com.github.zmarkan'
+
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.1"
